<resources>
    <string name="app_name">Amanage</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get Started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Amanage for free.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <!--sign up / in-->
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="invalid_password">Password must have at least 8 characters, an uppercase and 1 number</string>
    <string name="invalid_name">Please enter a name</string>
    <string name="invalid_email">Not a valid email</string>

    <string name="sign_in_description_text">Enter your email id and password, to log in with us.</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>


    <string name="login_failed">"Login failed"</string>

    <!--    Progress bar-->
    <string name="please_click_back">Please click back again to exit</string>
    <string name="please_wait">Please wait…</string>
    <string name="sorry">Sorry, please try again</string>
    <string name="form_error">You have to complete with correct values</string>
    <string name="success">Success</string>
    <string name="registered">User registered successfully</string>

    <!--    Home Activity-->
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="close">Close</string>
    <string name="create_board_title">Create Board</string>
    <string name="create_board">CREATE</string>
    <string name="board_name">Board Name</string>

    <!--My Profile-->
    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="error_permission_storage">Oops! You denied permission for storage. Go to storage to allow it</string>
    <string name="no_new_change">No new change to add</string>
    <string name="profile_updated">Profile updated successfully</string>
    <string name="profile_update_failed">Sorry profile not updated. Please try again!</string>

    <!--Create Board-->
    <string name="board_created">Board created successfully</string>
    <string name="board_create_failed">Sorry board not created. Please try again!</string>
    <string name="no_boards">No boards available. Please create one.</string>
    <string name="created_by">Created by:</string>
    <string name="board_error">Oops! An error occurred. Please try again</string>

    <!--Task List-->
    <string name="task_error">Oops! An error occurred. Please try again</string>
    <string name="action_add_list">Add List</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_list_name">List Name</string>
    <string name="hint_card_name">Card Name</string>
    <string name="list_name_error">Please enter a valid List Name</string>
    <string name="alert">Alert</string>
    <string name="are_you_sure">Are you sure you want to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--Card-->
    <string name="card_name_error">Please enter a valid Card Name</string>

    <!--Members-->
    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>


</resources>